--- a/_includes/themes/bootstrap-3/page.html
+++ b/_includes/themes/bootstrap-3/page.html
@@ -1,9 +1,12 @@
-<div class="page-header">
-  <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+<div class="article-title">
+    <h2>{% if page.title_cn %}{{ page.title_cn }}{% else %}{{ page.title }}{% endif %}{% if page.tagline %}
+        <small>{{ page.tagline }}</small>
+        {% endif %}
+    </h2>
 </div>
 
 <div class="row">
-  <div class="col-xs-12">
-    {{ content }}
-  </div>
+    <div class="col-xs-12">
+        {{ content }}
+    </div>
 </div>
