--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 theme :
-  name : the-minimum
+  name : bootstrap-3
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/the-minimum/post.html %}
+{% include themes/bootstrap-3/post.html %}
