增加导航条，增加关于我页面，修改部分页面样式。

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -49,16 +49,21 @@
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 </head>
 
-<body>
+<body style="background-color: #e2e2e2">
 <div id="wrap">
     <div class="container page-header">
         <!--<section class="page-header">-->
         <h1 class="project-name">{{ site.title }}</h1>
         <h2 class="project-tagline">Programmers know that their craft is not just science and technology but art.</h2>
+        <ol class="mynav">
+            <li><a href="/">首页</a></li>
+            <li><a href="/categories/all.html">博文目录</a></li>
+            <li><a href="/about.html">关于我</a></li>
+        </ol>
     </div>
-    <div class="container">
+    <div class="container" style="margin-bottom: 20px;">
         <div class="row">
-            <div class="col-xs-2">
+            <div class="col-xs-2" style="background-color: #fff;border-right: 10px solid #e2e2e2">
                 <ul class="nav nav-stacked" style="color: #000">
                     <li role="presentation" class="active">
                         <a href="javascript:void(0)" style="cursor:default;">作者简介</a>
@@ -82,7 +87,7 @@
                     <li role="presentation" class="active">
                         <a href="javascript:void(0)" style="cursor:default;">文章分类</a>
                         {% assign categories_list = site.data.categories %}
-                        {% include JB/categories_list %}
+                        {% include custom/categories_list %}
                     </li>
                     <li role="presentation" class="active">
                         <a href="javascript:void(0)" style="cursor:default;">友情链接</a>
@@ -101,7 +106,7 @@
                     </div>
                 </nav>-->
             </div>
-            <div class="col-xs-10">
+            <div class="col-xs-10" style="background-color: #fff;">
                 {{ content }}
             </div>
         </div>
@@ -109,7 +114,7 @@
 </div>
 
 <!-- id="footer"-->
-<div class="container page-footer">
+<div class="container page-footer" style="margin-bottom: 20px;">
     <h4 style="margin-top: 40px;">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}，{{ site.author.email }}</h4>
 </div>
 
