--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -5,7 +5,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "微软雅黑", "宋体", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #606c71;
@@ -68,6 +68,50 @@ a:hover {
     }
 }
 
+.category-list {
+    font-size: 14px;
+    line-height: 25px;
+}
+
+.category-list a {
+    color: #000;
+}
+
+.mynav {
+    padding: 8px 15px;
+    list-style: none;
+    border-radius: 4px;
+    width: 240px;
+    margin: 0 auto -50px;
+}
+
+.mynav > li {
+    display: inline-block;
+}
+
+.mynav > li > a {
+    color: #fff;
+}
+
+.mynav > li + li:before {
+    padding: 0 5px;
+    color: #ccc;
+    content: "/\00a0";
+}
+
+.title-bold {
+    font-family: 微软雅黑, 宋体, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    margin: 30px 0 10px;
+}
+
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .page-header {
     color: #fff;
     text-align: center;
@@ -86,6 +130,8 @@ a:hover {
 .article-title {
     border-bottom: 2px solid #ccc;
     margin-bottom: 20px;
+    font-weight: bold;
+    font-family: "微软雅黑", "宋体";
 }
 
 @media screen and (min-width: 64em) {
