--- a/assets/css/pygment_trac.css
+++ b/assets/css/pygment_trac.css
@@ -34,7 +34,7 @@
 .highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
 .highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
 .highlight .nn { color: #555555 } /* Name.Namespace */
-.highlight .nt { color: blue } /* Name.Tag */
+.highlight .nt { color: rgb(30, 107, 184); font-weight: bold; } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
 .highlight .ow { font-weight: bold } /* Operator.Word */
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
