--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -92,7 +92,7 @@
                     <li role="presentation" class="active">
                         <a href="javascript:void(0)" style="cursor:default;">友情链接</a>
                         <p class="small">
-                            <a target="_blank" href="http://blog.sina.com.cn/superbugs">我的新浪博客</a>
+                            <a target="_blank" href="http://blog.sina.com.cn/superbugs">我的新浪博客</a><br>
                             <a target="_blank" href="http://blog.csdn.net/z_Dendys">我的CSDN博客</a>
                         </p>
                     </li>
