--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:wb="http://open.weibo.com/wb">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,6 +51,7 @@
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
+	<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -86,10 +87,11 @@
                             </div>
                             <div class="col-xs-12">
                                 <h4>Dendy</h4>
-                                <div>
-                                    <a target="_blank" class="btn btn-xs btn-success" href="http://weibo.com/u/1821809482?source=blog">
+                                <div style="text-align:center;">
+                                    <!-- <a target="_blank" class="btn btn-xs btn-success" href="http://weibo.com/u/1821809482?source=blog">
                                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>我的微博
-                                    </a>
+                                    </a> -->
+                                    <wb:follow-button uid="1821809482" type="gray_3" width="100%" height="24" ></wb:follow-button>
                                 </div>
                                 <div style="text-align: left;margin-top: 10px;">
                                     <p style="font-size:12px;">轻轻地，我走了，正如我轻轻地来！我挥一挥衣袖，不带走一片云彩！</p>
