--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="keywords" content="Dendy's blog!, dendy, sunfuchang, {{page.tags | join: ','}}" />
-    <meta name="description" content="Dendy's blog!, dendy" />'
+    <meta name="description" content="Dendy's blog!, dendy" />
 
     <title>{{ page.title }}</title>
     {% if page.description %}
