--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -128,6 +128,9 @@
             </div>
             <div class="col-xs-10" style="background-color: #fff;">
                 {{ content }}
+                
+				<br>                	
+                <wb:share-button appkey="1271833232" addition="full" type="button" ralateUid="1821809482" pic="http%3A%2F%2Fsunfuchang.github.io%2Fassets%2Fimages%2Fhead.jpg"></wb:share-button>
             </div>
         </div>
     </div>
