--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -27,6 +27,8 @@
             {{ content }}
         </div>
 
+        <br>
+        <wb:share-button appkey="1271833232" addition="full" type="button" ralateUid="1821809482" pic="http%3A%2F%2Fsunfuchang.github.io%2Fassets%2Fimages%2Fhead.jpg"></wb:share-button>
         <hr>
         <ul class="pagination">
             {% if page.previous %}
