--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -47,5 +47,9 @@
         </ul>
         <hr>
         {% include JB/comments %}
+
+        <!-- 多说评论框 start -->
+		<div class="ds-thread" data-thread-key="{{page.title}}" data-title="{% if page.title_cn %} {{page.title_cn}} {% else %} {{page.title}} {% endif %}" data-url="{{ BASE_PATH }}{{page.url}}"></div>
+		<!-- 多说评论框 end -->
     </div>
 </div>
