--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -46,10 +46,10 @@
                 {% endif %}
         </ul>
         <hr>
-        {% include JB/comments %}
+        <!-- {% include JB/comments %} -->
 
         <!-- 多说评论框 start -->
-		<div class="ds-thread" data-thread-key="{{page.title}}" data-title="{% if page.title_cn %} {{page.title_cn}} {% else %} {{page.title}} {% endif %}" data-url="{{ BASE_PATH }}{{page.url}}"></div>
+		<div class="ds-thread" data-thread-key="{{page.id}}" data-title="{% if page.title_cn %} {{page.title_cn}} {% else %} {{page.title}} {% endif %}" data-url="{{ BASE_PATH }}{{page.url}}"></div>
 		<!-- 多说评论框 end -->
     </div>
 </div>
