--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -49,7 +49,7 @@
         <!-- {% include JB/comments %} -->
 
         <!-- 多说评论框 start -->
-		<div class="ds-thread" data-thread-key="{{page.id}}" data-title="{% if page.title_cn %} {{page.title_cn}} {% else %} {{page.title}} {% endif %}" data-url="http://sunfuchang.github.io{{page.url}}"></div>
+		<div class="ds-thread" data-thread-key="{{page.id}}" data-title="{% if page.title_cn %} {{page.title_cn}} {% else %} {{page.title}} {% endif %}" data-url="{{ BASE_PATH }}{{page.url}}"></div>
 		<!-- 多说评论框 end -->
     </div>
 </div>
