--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -147,6 +147,7 @@
 <script src="{{ ASSET_PATH }}/bootstrap/js/jquery-1.10.2.min.js"></script>
 <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
 <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
+<!-- <script src="/assets/js/jquery.pin.min.js"></script> -->
 <script>
     var _hmt = _hmt || [];
     (function() {
@@ -166,6 +167,8 @@
         (document.getElementsByTagName('head')[0]
         || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
+
+    // $('.nav-stacked').pin();
 </script>
 </body>
 </html>
