--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -63,6 +63,7 @@
             <li><a href="/">首页</a></li>
             <li><a href="/categories/all.html">博文目录</a></li>
             <li><a href="/about.html">关于我</a></li>
+            <li><a href="/feed.xml">RSS订阅</a></li>
         </ol>
     </div>
     <div class="container" style="margin-bottom: 20px;">
