--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -81,7 +81,7 @@ a:hover {
     padding: 8px 15px;
     list-style: none;
     border-radius: 4px;
-    width: 240px;
+    width: 320px;
     margin: 0 auto -50px;
 }
 
@@ -136,7 +136,7 @@ a:hover {
 
 @media screen and (min-width: 64em) {
     .page-header {
-        padding: 5rem 6rem;
+        padding: 5rem 6rem 9rem;
     }
 }
 
