--- a/_includes/themes/medigo/header.html
+++ b/_includes/themes/medigo/header.html
@@ -1,10 +1,10 @@
 <div class="responsive_menu">
       <ul class="main_menu">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <!--<li><a href="#">Portfolio</a></li>-->
             <li><a href="/blog/index.html">Blog</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/concat.html">Contact</a></li>
       </ul>
       <!-- /.main_menu -->
 </div>
@@ -25,12 +25,12 @@
                         <div class="main-navigation pull-right">
                               <nav class="main-nav visible-md visible-lg">
                                     <ul class="sf-menu">
-                                          <li class="active"><a href="/index.html">Home</a></li>
-                                          <li><a href="#">Portfolio</a></li>
+                                          <li class="{% if page.title == 'Home' %} active {% endif %}"><a href="/index.html">Home</a></li>
+                                          <!--<li><a href="#">Portfolio</a></li>-->
                                           <!-- 添加分页后，index。html -->
-                                          <li><a href="/blog/index.html">Blog</a></li>
-                                          <li><a href="#">Archives</a></li>
-                                          <li><a href="#">Contact</a></li>
+                                          <li class="{% if page.title == 'Blog' or (page.title != 'Home' and page.title != 'Concat' and page.title != 'About') %} active {% endif %}"><a href="/blog/index.html">Blog</a></li>
+                                          <li class="{% if page.title == 'About' %} active {% endif %}"><a href="/about.html">About</a></li>
+                                          <li class="{% if page.title == 'Concat' %} active {% endif %}"><a href="/concat.html">Contact</a></li>
                                     </ul>
                                     <!-- /.sf-menu -->
                               </nav>
