--- a/_includes/themes/medigo/right.html
+++ b/_includes/themes/medigo/right.html
@@ -1,6 +1,22 @@
 <div class="col-md-4">
     <div class="sidebar">
         <div class="sidebar-widget">
+            <h5 class="widget-title">About Me</h5>
+            <div class="col-xs-12">
+                <img src="{{site.url}}/assets/images/head.jpg" class="img-thumbnail">
+            </div>
+            <div class="col-xs-12">
+                <h4>Dendy</h4>
+                <div style="text-align:center;">
+                    <wb:follow-button uid="1821809482" type="gray_3" width="100%" height="24" ></wb:follow-button>
+                </div>
+                <div style="text-align: left;margin-top: 10px;">
+                    <p class="light-text">轻轻地，我走了，正如我轻轻地来！我挥一挥衣袖，不带走一片云彩！</p>
+                </div>
+            </div>
+        </div>
+        <!-- /.sidebar-widget -->
+        <div class="sidebar-widget">
             <h5 class="widget-title">Categories</h5>
 
             <div class="row categories">
@@ -70,14 +86,6 @@
                 {% assign tags_list = site.tags %}
                 {% include custom/tags_list %}
             </div>
-        </div>
-        <!-- /.sidebar-widget -->
-        <div class="sidebar-widget">
-            <h5 class="widget-title">Text Widget</h5>
-
-            <p class="light-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus. Cum sociis natoque penatibus et magnis dis
-                parturient… </p>
         </div>
         <!-- /.sidebar-widget -->
     </div>
