--- a/_includes/themes/medigo/right.html
+++ b/_includes/themes/medigo/right.html
@@ -7,9 +7,9 @@
             </div>
             <div class="col-xs-12">
                 <h4>Dendy</h4>
-                <div style="text-align:center;">
+                <!-- <div style="text-align:center;">
                     <wb:follow-button uid="1821809482" type="gray_3" width="100%" height="24" ></wb:follow-button>
-                </div>
+                </div> -->
                 <div style="text-align: left;margin-top: 10px;">
                     <p class="light-text">轻轻地，我走了，正如我轻轻地来！我挥一挥衣袖，不带走一片云彩！</p>
                 </div>
@@ -88,6 +88,13 @@
             </div>
         </div>
         <!-- /.sidebar-widget -->
+
+        <div class="sidebar-widget">
+            <h5 class="widget-title">Weibo</h5>
+            <div class="tag-items" style="margin-top: 0px;">
+                <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=0&skin=3&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=1821809482&verifier=02959ff0&dpc=1"></iframe>
+            </div>
+        </div>
     </div>
     <!-- /.sidebar -->
 </div>
