--- a/_includes/themes/medigo/index.html
+++ b/_includes/themes/medigo/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:wb="http://open.weibo.com/wb">
 <head>
     {% include themes/medigo/meta.html %}
+    <meta name="baidu-site-verification" content="ReiTGs4akh" />
 </head>
 
 <body>
