添加文章归档

--- a/_includes/themes/medigo/blog.html
+++ b/_includes/themes/medigo/blog.html
@@ -11,11 +11,11 @@
         <div class="container pageTitle">
             <div class="row">
                 <div class="col-md-6 col-sm-6">
-                    <h2 class="page-title">Blog</h2>
+                    <h2 class="page-title">{{blog_title}}</h2>
                 </div>
                 <!-- /.col-md-6 -->
                 <div class="col-md-6 col-sm-6 text-right">
-                    <span class="page-location">Home / Blog</span>
+                    <span class="page-location">{{blog_desc}}</span>
                 </div>
                 <!-- /.col-md-6 -->
             </div>
