--- a/_includes/themes/medigo/post.html
+++ b/_includes/themes/medigo/post.html
@@ -31,6 +31,14 @@
         <div class="col-md-8 blog-posts">
             <div class="row">
                 <div class="col-md-12">
+                    <div class="thunm-bread">
+                      <span class="meta-date"><a href="#">Blog</a></span>            
+                            <span class="meta-comments">
+                                <a href="#">
+                                    文章详情
+                                </a>
+                            </span>     
+                        </div>
                     <div class="post-blog">
                         <div class="blog-image">
                             <img src="{{ASSET_PATH}}/images/includes/blog{{page.title | size | modulo:5}}.jpg" alt="">
