--- a/_includes/themes/medigo/meta.html
+++ b/_includes/themes/medigo/meta.html
@@ -48,3 +48,6 @@
       title="Sitewide ATOM Feed">
 <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate"
       title="Sitewide RSS Feed">
+
+<!-- 目录生成插件 -->
+<link rel="stylesheet" href="/assets/css/zTreeStyle/zTreeStyle.css" type="text/css">	
