--- a/_includes/themes/medigo/post.html
+++ b/_includes/themes/medigo/post.html
@@ -118,5 +118,12 @@
 <!-- /.container -->
 
 {% include themes/medigo/footer.html %}
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#tree').ztree_toc({
+            is_auto_number: true
+        });
+    });
+</script>
 </body>
 </html>
