--- a/_includes/themes/medigo/footer.html
+++ b/_includes/themes/medigo/footer.html
@@ -41,6 +41,11 @@
 
 <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 <!-- Templatemo Script -->
+
+<!-- 目录生成插件 -->
+<script type="text/javascript" src="/assets/js/jquery.ztree.core-3.5.js"></script>
+<script type="text/javascript" src="/assets/js/ztree_toc.js"></script>
+
 <script>
     var _hmt = _hmt || [];
     (function() {
