--- a/_includes/themes/medigo/post.html
+++ b/_includes/themes/medigo/post.html
@@ -56,6 +56,9 @@
 
                             <h1>{% if page.title_cn %}{{ page.title_cn }}{% else %}{{ page.title }}{% endif %}</h1>
 
+                            <!-- 目录 -->
+                            <div id="tree"></div>
+                            
                             {{content}}
 
                             <div class="tag-items">
