--- a/_includes/themes/medigo/post.html
+++ b/_includes/themes/medigo/post.html
@@ -122,11 +122,11 @@
 
 {% include themes/medigo/footer.html %}
 <script type="text/javascript">
-    $(document).ready(function(){
-        $('#tree').ztree_toc({
-            is_auto_number: true
-        });
-    });
+    // $(document).ready(function(){
+    //     $('#tree').ztree_toc({
+    //         is_auto_number: true
+    //     });
+    // });
 </script>
 </body>
 </html>
