--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,3 +152,21 @@ h6,h6 a {
 .thunm-bread {
   margin: 20px 0 40px 0;
 }
+
+.toc {
+    background: #eee;
+    float: right;
+    margin: 10px;
+    padding: 10px;
+    font-size: 0.6em;
+}
+
+.toc .toc-title {
+	margin: 10px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+}
+
+.toc .toc-content {
+	margin: 10px;
+}
