--- a/_includes/themes/medigo/header.html
+++ b/_includes/themes/medigo/header.html
@@ -16,7 +16,7 @@
                   <div class="col-md-12">
                         <div class="pull-left logo">
                               <a href="index.html" style="font-size: 1.8em!important; font-weight: bold; font-family: sans-serif;">
-                                    <img src="{{ ASSET_PATH }}/images/favicon.ico" alt="Medigo by templatemo">
+                                    <img src="{{ ASSET_PATH }}/images/favicon.ico" style="width: 12%;" alt="Medigo by templatemo">
                                     {{site.title}}
                               </a>
                         </div>
