--- a/_includes/themes/medigo/right.html
+++ b/_includes/themes/medigo/right.html
@@ -3,7 +3,7 @@
         <div class="sidebar-widget">
             <h5 class="widget-title">About Me</h5>
             <div class="col-xs-12">
-                <img src="{{site.url}}/assets/images/head.jpg" class="img-thumbnail">
+                <img src="{{site.url}}/assets/images/head.jpg" style="width: 60%;" class="img-thumbnail">
             </div>
             <div class="col-xs-12">
                 <h4>Dendy</h4>
