--- a/_includes/themes/medigo/right.html
+++ b/_includes/themes/medigo/right.html
@@ -50,7 +50,7 @@
             <div class="row categories">
                 <div class="col-md-12">
                     <li><a target="_blank" href="http://blog.sina.com.cn/superbugs">新浪博客</a><br></li>
-                    <li><a target="_blank" href="http://blog.csdn.net/z_Dendys">CSDN博客</a></li>
+                    <li><a target="_blank" href="http://blog.csdn.net/z_Dendy">CSDN博客</a></li>
                 </div>
             </div>
             <!-- /.row -->
