--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -4,4 +4,4 @@ theme :
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/medigo/blog.html %}
+{% include themes/medigo/header.html %}
