--- a/_includes/themes/medigo/post.html
+++ b/_includes/themes/medigo/post.html
@@ -108,7 +108,7 @@
                     <!-- 多说评论框 start -->
                     <div class="ds-thread" data-thread-key="{{page.id}}"
                          data-title="{% if page.title_cn %} {{page.title_cn}} {% else %} {{page.title}} {% endif %}"
-                         data-url="http://sunfuchang.github.io{{page.url}}"></div>
+                         data-url="http://sunfuchang.github.io{{page.url}}.html"></div>
                     <!-- 多说评论框 end -->
                 </div>
                 <!-- /.col-md-12 -->
