--- a/_includes/themes/medigo/right.html
+++ b/_includes/themes/medigo/right.html
@@ -68,7 +68,7 @@
                 <div class="content">
                     <span>{{ page.date | date : '%Y年%m月%-d日' }}</span>
                     <h6>
-                        <a href="{{ BASE_PATH }}{{page.url}}">
+                        <a href="{{ BASE_PATH }}{{page.url}}.html">
                             {% if page.title_cn %}{{ page.title_cn }}{% else %}{{ page.title }}{% endif %}
                         </a>
                     </h6>
