--- a/_includes/themes/medigo/right.html
+++ b/_includes/themes/medigo/right.html
@@ -49,6 +49,7 @@
 
             <div class="row categories">
                 <div class="col-md-12">
+		    <li><a target="_blank" href="http://www.belonk.com">个人网站</a><br></li>
                     <li><a target="_blank" href="http://blog.sina.com.cn/superbugs">新浪博客</a><br></li>
                     <li><a target="_blank" href="http://blog.csdn.net/z_Dendy">CSDN博客</a></li>
                 </div>
